--- a/react-exercices/package.json
+++ b/react-exercices/package.json
@@ -21,5 +21,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "react-redux": "^5.0.2",
+    "redux": "^3.6.0"
+  }
 }
